--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#25D366" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="AMDA" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/icon-512x512.png" />
     <title>AMDA - WhatsApp Assistant</title>
     <meta name="description" content="Assistant WhatsApp pour gérer vos statuts, messages supprimés et plus encore" />
     <meta name="author" content="AMDA" />
